ags (3.13.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsChorusUtil boundaries
	* fixed conditional build of AgsAlsaDevout
	* fixed AgsOssMidiin recording MIDI

ags (3.13.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsChorusUtil

ags (3.13.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsTaskLauncher freeing tasks
	* fixed AgsScrolledLevelBox, AgsScrolledScaleBox, AgsScrolledAutomationEditBox
	  and AgsScrolledWaveEditBox not available property shadow-type of AgsViewport

ags (3.13.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAlsaDevout, AgsAlsaDevin and AgsAlsaMidiin
	* implemented AgsOssDevout, AgsOssDevin and AgsOssMidiin
	* deprecated AgsDevout, AgsDevin and AgsMidiin
	* refactored make use of new device implementation of ALSA and OSS

ags (3.13.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsWave insert from clipboard
	* fixed AgsCompositEdit match line of wave form editor
	* fixed AgsAudioApplicationContext to set setup_ready field to TRUE

ags (3.13.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsTimeStretchBufferDialog
	* implemented ags_time_stretch_util.c
	* implemented getter functions in ags_midi_util.c
	* implemented ags-fx-low-pass
	* implemented ags-fx-high-pass
	* refactored ags-fx-volume to use new accelerated AgsVolumeUtil functions
	* refactored ags-fx-envelope to use new accelerated AgsEnvelopeUtil functions
	* updated developer manual additional content and listings

ags (3.12.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed conditional build of VST3 in ags_fx_factory.c

ags (3.12.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsAudioToolbox RW open and write file
	* improved developer docs, additional information on threading

ags (3.12.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]