@@ -1,3 +1,8 @@
+ags (3.13.6)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing ALSA and OSSv4 switch buffer flag
+
 ags (3.13.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
